--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
+  height: 100px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -19,15 +13,38 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form {
+  margin-top: 50px;
+  padding-top: 15px;
+  width: 400px;
+  height: 200px;
+  border-color: black;
+  border-style: solid;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px 15px 15px 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.textField {
+  width: 300px;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
 }
+
+.button {
+  margin-top: 10px;
+}
+
+.taskAdded {
+  margin-top: 8px;
+  font-weight: bold;
+
+}
+
+
